--- a/style.css
+++ b/style.css
@@ -8,3 +8,9 @@
     height: 200px;
     background-color: tomato;
 }
+.circulo {
+    width: 200px;
+    height: 200px;
+    background-color: purple;
+    border-radius: 50%;
+}
